[package]
name = "rust-mircroservice"
version = "0.1.0"
authors = ["George Vincent <gvincent247@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.5.3"
futures = "0.1.17"
hyper = "0.11.13"
log = "0.4.1"
url = "2.1.1"
serde_json = "1.0.56"
serde_derive = "1.0.114"
serde = "1.0.114"
diesel = { version = "1.0.0", features = ["postgres"] }
maud = "*"
chrono = "0.4.11"
